2019-04-06 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.1
    * fixed bug in logLik.dglars

2018-10-09 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.0
    * added "grcv" function to estimate the dispersion parameter
    * fixed bug in cvdglars

2018-04-12 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.0.1
    * cBind() is replaced by cbind()

2016-11-17 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.0.0
	* the package 'Matrix' is used to handle sparce algebra in R.
	* PC algorithm is extended to inverse gaussian, gamma and gaussian family.
	* PC algorithm can fit dglars model to glm with standard link functions.
	* if family is "binomial" then the respnce vector can be a matri with two colums,
		i.e., the first "column" is the number of successes and the second column is
		the number of "failures".
	* added phi_hat subroutines to estimate the dispersion parameter when family is
		inverse gaussian, gamma or gaussian.
	* added argument 'unpenalized' to dglars/dglars.fit functions to fit dglars models
		where a subset of parameters is unpenalized.
	* added methods functions: coef.dglars, coef.cvdglars, predict.dglars, logLik.dglars,
		AIC.dglars and BIC.dglars.
	* improved the output of the method functions: print.dglars, summary.dglars and plot.dglars
	* gdf function is extended to inverse gaussian, gamma and gaussian family

2014-08-09 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.5
	* added reference to Journal of Statistical Software paper

2013-12-19 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.4
	* output from cvdglars() function has been improved including an object of class 
		"formula" used to describe the model estimated by cross-validation
	* output from cvdglars.fit() function has been improved including a character vector 
		with the name of the variables selected by cross-validation.

2013-10-08 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 1.0.3
	* bug fixed in make_dglars
