@@ -1,8 +1,8 @@
 Package: dglars
 Type: Package
 Title: Differential Geometric Least Angle Regression
-Version: 2.1.1
-Date: 2019-04-06
+Version: 2.1.2
+Date: 2019-06-12
 Author: Luigi Augugliaro
 Maintainer: Luigi Augugliaro <luigi.augugliaro@unipa.it>
 Imports: methods
@@ -13,5 +13,5 @@ LazyLoad: yes
 Depends: Matrix, R (>= 3.2)
 NeedsCompilation: yes
 Repository: CRAN
-Packaged: 2019-04-06 09:13:01 UTC; luigiaugugliaro
-Date/Publication: 2019-04-06 09:42:45 UTC
+Packaged: 2019-06-12 06:38:13 UTC; luigiaugugliaro
+Date/Publication: 2019-06-14 07:10:03 UTC
