@@ -12,8 +12,8 @@ Differential geometric least angle regression method for fitting sparse generali
 \tabular{ll}{
 Package: \tab dglars\cr
 Type: \tab Package\cr
-Version: \tab 2.1.1\cr
-Date: \tab 2018-04-06\cr
+Version: \tab 2.1.2\cr
+Date: \tab 2018-06-12\cr
 License: \tab GPL (>=2)
 }
 }
@@ -25,7 +25,7 @@ Maintainer: Luigi Augugliaro  <luigi.augugliaro@unipa.it>
 
 \references{
 Augugliaro L., Mineo A.M. and Wit E.C. (2016) <DOI:10.1093/biomet/asw023>
-\emph{A differential-geometric approach to generalized linear models with grouped predictors}, Vol 103(3), 563-577. \url{http://biomet.oxfordjournals.org/content/103/3/563.abstract}.
+\emph{A differential-geometric approach to generalized linear models with grouped predictors}, Vol 103(3), 563-577.
 
 Augugliaro L., Mineo A.M. and Wit E.C. (2014) <DOI:10.18637/jss.v059.i08>
 \emph{dglars: An R Package to Estimate Sparse Generalized Linear Models}, \emph{Journal of Statistical Software}, Vol 59(8), 1-40. \url{http://www.jstatsoft.org/v59/i08/}.
