@@ -1,3 +1,6 @@
+2019-06-12 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.2
+    * fixed bug in dglars.h
+
 2019-04-06 Luigi Augugliaro <luigi.augugliaro@unipa.it> version 2.1.1
     * fixed bug in logLik.dglars
 
